2011-04-11  Raymond Penners  <pennersr@ubuntosx>

	* Pass along next URL, if any, at /accounts/social/signup/.

	* Duplicate email address handling could throw a
	MultipleObjectsReturned exception, fixed.

2011-04-10  Raymond Penners  <raymond.penners@intenct.nl>

	* Removed separate social account login view, in favour of having
	a single unified login view including both forms of login.

2011-04-07  Raymond Penners  <raymond.penners@intenct.nl>

	* Added support for passing along a next URL parameter to
	Facebook, OpenID logins.

2011-02-13  Raymond Penners  <raymond.penners@intenct.nl>

	* Added support for django-avatar, copying the Twitter profile
	image locally on signup.

2010-11-12  Raymond Penners  <raymond.penners@intenct.nl>

	* allauth/account/forms.py (BaseSignupForm.clean_email): With
	ACCOUNT_EMAIL_REQUIRED=False, empty email addresses were
	considered duplicates. Fixed.

2010-11-12  Raymond Penners  <raymond.penners@intenct.nl>

	* The existing migrations for allauth.openid were not compatible
	with MySQL due to the use of an URLField with max_length above
	255. The issue has now been addressed but unfortunately at the
	cost of the existing migrations for this app. Existing
	installations will have to be dealt with manually (altering the
	"identity" column of OpenIDAccount, deleting ghost migrations).